feat 新增搜索框 搜索页  切换门店功能

--- a/project.private.config.json
+++ b/project.private.config.json
@@ -9,8 +9,15 @@
     "miniprogram": {
       "list": [
         {
-          "name": "登录",
-          "pathName": "pages/home/index",
+          "name": "",
+          "pathName": "pages/index/index",
+          "query": "",
+          "launchMode": "default",
+          "scene": null
+        },
+        {
+          "name": "登录测试",
+          "pathName": "pages/login/index",
           "query": "",
           "launchMode": "default",
           "scene": null
