--- a/app.json
+++ b/app.json
@@ -7,7 +7,8 @@
         "pages/music/index",
         "pages/rap/index",
         "pages/login/index",
-        "pages/mine/index"
+        "pages/mine/index",
+        "pages/search/index"
     ],
     "subpackages": [{
         "root": "pageOther",
